--- a/labs/MP-1/index.html
+++ b/labs/MP-1/index.html
@@ -22,7 +22,7 @@
           <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art and Science of</a></div>
           <div class="course_title"><a href="https://uiuc-web-programming.github.io/su17/" class="ng-binding">Web Programming</a></div>
           <div class="course_schedule">
-            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY AND WEDNESDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11AM-12.15PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DCL 1310</div>
+            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY TO THURSDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3:30PM - 4:45PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL CENTER 0216</div>
           </div>
         </div>
       </div>
@@ -50,13 +50,10 @@
   <li>Position Indicator: Indicator of the current reading position visible in the navigation bar (see above gif for example). Make sure your implementation highlights the last menu item when you scroll to the bottom of the page. (<span style="color: blue"> Implementation Tip </span>: To figure out which menu item to highlight, you’ll have to figure out which section lies directly below the bottom margin of the navigation bar. You can use methods that give you the height and position of different divs to figure that out. You will want to recompute this whenever there is a scroll event.)</li>
   <li>Navbar Resizing: Navigation bar must be larger when users are at the top of the page. As users start scrolling down, it should resize and become smaller. Note that the text fontsize should also start larger and become smaller as users scroll down - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/4.gif">Example</a></li>
   <li>Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif">Example</a></li>
-  <li>Carousel: A section with a carousel/slider using a minimum of three slides. It should include the navigation arrows on the side - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.gif">Example</a></li>
   <li>Multi-column layout: A section with Multi-column content - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png">Example</a></li>
   <li>Centering: Content in each horizontal stripe/section must be horizontally centered. At least one element on the page must be vertically centered. The vertically-centered element should remain centered even if the dimensions of its outer element changes.</li>
-  <li>Background Image: A section which uses a fixed-position background image - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/9.gif">Example</a></li>
   <li>Modal: A section which uses modal windows with additional content - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif">Example</a></li>
   <li>Video: Embedded video using HTML5 video tag - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif">Example</a></li>
-  <li>CSS3 Animations: At least one use of CSS3 animations (e.g. fade in/out, transitions)</li>
   <li>At least one use of scalable vector icons through CSS (e.g. FontAwesome)</li>
   <li>Inclusion of social media icons</li>
   <li><span style="color: red"> Extra Credit: </span>create a original <a href="http://en.wikipedia.org/wiki/Favicon">favicon</a> for your page. The best favicon will be used for the class webpage.</li>
@@ -78,29 +75,20 @@
 <ol>
   <li>Layout and Overall Design - 20%</li>
   <li>Code (follows HTML5, SASS/SCSS, Javascript/jQuery best practices) - 10%</li>
-  <li>Deployment to Server - 5%</li>
-  <li>Sticky Navbar - 1%</li>
-  <li>Position Indicator - 5%</li>
-  <li>Navbar Resizing - 5%</li>
-  <li>Smooth Scrolling - 10%</li>
-  <li>Carousel - 10%</li>
+  <li>Sticky Navbar - 10%</li>
+  <li>Position Indicator - 15%</li>
+  <li>Navbar Resizing - 10%</li>
+  <li>Smooth Scrolling - 12%</li>
   <li>Multi-column layout - 5%</li>
   <li>Centering - 2%</li>
-  <li>Background Image - 1%</li>
   <li>Modal - 10%</li>
   <li>Video - 2%</li>
-  <li>CSS3 Animations - 10%</li>
   <li>Scalable vector icons - 2%</li>
   <li>Inclusion of social media icons - 2%</li>
   <li><span style="color: red"> Extra Credit: 2% </span></li>
 </ol>
 
 <div class="section-heading">Submission Details</div>
-
-<p>Submission Link: http://uiucwp.com/mp1/submit</p>
-
-
-
 			</div>
 		</div>
 	</body>
