--- a/labs/MP-1/index.html
+++ b/labs/MP-1/index.html
@@ -19,7 +19,7 @@
             <a href="../labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="https://uiuc-web-programming.github.io/su17/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
-          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art and Science of</a></div>
+          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art of</a></div>
           <div class="course_title"><a href="https://uiuc-web-programming.github.io/su17/" class="ng-binding">Web Programming</a></div>
           <div class="course_schedule">
             <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY TO THURSDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3:30PM - 4:45PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL CENTER 0216</div>
@@ -89,6 +89,8 @@
 </ol>
 
 <div class="section-heading">Submission Details</div>
+
+<br> TBD
 			</div>
 		</div>
 	</body>
