--- a/labs/MP-1/index.html
+++ b/labs/MP-1/index.html
@@ -39,7 +39,7 @@
 <div class="section-heading">Overview</div>
 <p>In this programming assignment, you will design and implement a single-page website with specified functionality and formatting using only HTML, SCSS, and Javascript. The content of the website is up to you. For example, the subject can be a company/organization, a product, or a personal/portfolio page. This assignment will give you first-hand experience with HTML5 (e.g. header, canvas, video), CSS3/SASS (e.g. use of webfonts, animations, layout), and Javascript/jQuery.</p>
 
-<p>Refer to <a href="https://uiuc-web-programming.github.io/su17/Lab-1">Dev Lab 1</a> for setting up a development environment for this assignment.</p>
+<p>Refer to <a href="https://uiuc-web-programming.github.io/su17/labs/Lab-1">Dev Lab 1</a> for setting up a development environment for this assignment.</p>
 
 <div class="section-heading">Required Features</div>
 <p>Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.</p>
