--- a/labs/MP-1/index.html
+++ b/labs/MP-1/index.html
@@ -52,7 +52,7 @@
   <li>Smooth Scrolling: Smooth scrolling when navigating to a different section using the navigation bar <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/5.gif">Example</a></li>
   <li>Multi-column layout: A section with Multi-column content - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/8.png">Example</a></li>
   <li>Centering: Content in each horizontal stripe/section must be horizontally centered. At least one element on the page must be vertically centered. The vertically-centered element should remain centered even if the dimensions of its outer element changes.</li>
-  <li>Modal: A section which uses modal windows with additional content - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif">Example</a></li>
+  <li>Modal: A section which uses modal windows with additional content - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/10.gif">Example</a> <strong> OR </strong> Carousel: A section with a carousel/slider using a minimum of three slides. It should include the navigation arrows on the side - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/6.gif">Example</a></li>
   <li>Video: Embedded video using HTML5 video tag - <a href="http://courses.engr.illinois.edu/cs498rk1/images/mp1/11.gif">Example</a></li>
   <li>At least one use of scalable vector icons through CSS (e.g. FontAwesome)</li>
   <li>Inclusion of social media icons</li>
@@ -81,7 +81,7 @@
   <li>Smooth Scrolling - 12%</li>
   <li>Multi-column layout - 5%</li>
   <li>Centering - 2%</li>
-  <li>Modal - 10%</li>
+  <li>Modal OR Carousel (NO Points will be given for incomplete implementations) - 10%</li>
   <li>Video - 2%</li>
   <li>Scalable vector icons - 2%</li>
   <li>Inclusion of social media icons - 2%</li>
