--- a/labs/MP-1/index.html
+++ b/labs/MP-1/index.html
@@ -94,7 +94,7 @@
 	  <li> Add uiuc-web-programming as a collaborator on the private Github repo that you created for part B. Keep the repo private.</li>
 	  <li> Submit your code for building using <a href="http://45.55.43.143/#/submit">this</a> system </li>
 	<li> In 2-5 mins, the build system will send you an email with a link to your website. Check the link to make sure everything looks good. If not, correct the mistakes, push changes to Github, and then submit again to have another version built. </li>
-<li> Fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSdboCFvbXhs-ET9-G43rXucFJi-1CzjSAMwW4JyNUR-yhwoRw/viewform?usp=sf_link">this </a> form. </li>
+<li> Fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLScQWi8kXbshnSqz-q-zePhgh6TXAatf3EH5jPLJKyc3_OrzBw/viewform">this </a> form. </li>
 <ol>
 			
 	       
