--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -8,7 +8,7 @@
 		  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     	<script src="../public/foundation.min.js"></script>
 
-        <title>MP 3.0: AngularJS Front-end</title>
+        <title>MP 2.0: Foundation & AngularJS</title>
         <link rel="stylesheet" href="../css/main.css" >
     </head>
     <body>
@@ -32,7 +32,7 @@
 
 
 
-    	<div class="heading">MP 3.0: Foundation & AngularJS</div>
+    	<div class="heading">MP 2.0: Foundation & AngularJS</div>
 
     	<p><span class="section-heading"> Due Date - <em>July 12th</em>, 2016, 11.59PM CST <span></span></span></p>
 
@@ -117,33 +117,43 @@ src="./photos/skyline.jpg"
 <p>List View:</p>
 
 <ul>
-  <li>Does the list view display movies? (2 points)</li>
-  <li>Does the search bar narrow down the movies? (4 points)</li>
-  <li>Can you sort by Film Name and Film Rank?  (4 points)</li>
-  <li>Can the sorting be done in Ascending and Descending order?  (4 points)</li>
+  <li>Do the results change as we type? (5 points)</li>
+  <li>Does the search bar narrow down the movies? (5 points)</li>
+  <li>Can you sort by Film Name and Film Rank?  (5 points)</li>
+  <li>Can the sorting be done in Ascending and Descending order?  (5 points)</li>
+  <li>Is there a 4+ column grid for large screens? (5 points) </li>
+  <li>Is there a 3 column grid for medium screens? (5 points) </li>
+  <li>Is there a 3 column grid for smll screens? (5 points) </li> 
 </ul>
 
 <p>Gallery View:</p>
 
 <ul>
-  <li>Is the gallery composed of movie posters?  (2 points)</li>
-  <li>Does clicking on a Genre filter out the movies?  (4 points)</li>
+  <li>Is the gallery composed of movie posters?  (5 points)</li>
+  <li>Does the list of genres contain all genres?  (5 points)</li>
+  <li>Does clicking on a Genre filter out the movies?  (5 points)</li>
+  <li>Does the genres menu use a responsive grid as described in the requirements? (5 points)</li>
+  <li>Do the movie posters have a responsive grid as described in the requirements? (5 points)</li>
+
+  
 </ul>
 
 <p>Details View:</p>
 
-<ul>
+<ul> 
   <li>Does clicking on a movie in List View take you to the Details View?  (5 points)</li>
   <li>Does clicking on a movie in Gallery View take you to the Details View?  (5 points)</li>
-  <li>Does the Details View contain movie details?  (4 points)</li>
-  <li>Does the PREVIOUS and NEXT buttons work correctly?  (5 points)</li>
+  <li>Does the Details View contain movie details?  (5 points)</li>
+  <li>Do the PREVIOUS and NEXT buttons work correctly?  (10 points)</li>
+  <li>Does the grid change as described in the requirements from large to small? (5 points) </li>
 </ul>
 
 <p>Other:</p>
 
 <ul>
-  <li>Does the implementation use partials and routes?  (6 points)</li>
-  <li>design (5 points)</li>
+  <li>Does the implementation use partials and routes?  (10 points)</li>
+  <li>Does the implementation use factories/services?  (5 points)</li>  
+  <li>Design (5 points)</li>
 </ul>
 
 <div class="section-heading"> Tips </div>
@@ -170,11 +180,7 @@ src="./photos/skyline.jpg"
 <p>This prevents the function parameter names from being changed.</p>
 
 <div class="section-heading"> Submission Details </div>
-<p>Please submit your MP at <a href="http://uiucwp.com/#/submit">http://uiucwp.com/#/submit</a>.</p>
-
-<p>Make sure you fill out the supplemental submission form once you complete your MP. You can find the form <a href="https://drive.google.com/open?id=1ZyBVkOAEs9uWqPPxgWUFSXWprPZTbSRLXiTurqVWIt0">here</a>. The supplemental form is required!</p>
-
-<p>If you run into any issues using the submission and build system, please post on Piazza.</p>
+<p> TBD </p> 
 
 
 
