--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -117,23 +117,22 @@ src="./photos/skyline.jpg"
 <p>List View:</p>
 
 <ul>
-  <li>Do the results change as we type? (5 points)</li>
-  <li>Does the search bar narrow down the movies? (5 points)</li>
-  <li>Can you sort by Film Name and Film Rank?  (5 points)</li>
-  <li>Can the sorting be done in Ascending and Descending order?  (5 points)</li>
-  <li>Is there a 4+ column grid for large screens? (5 points) </li>
-  <li>Is there a 3 column grid for medium screens? (5 points) </li>
-  <li>Is there a 3 column grid for smll screens? (5 points) </li> 
+  <li>Do the results change as we type? (6 points)</li>
+  <li>Does the search bar narrow down the movies? (6 points)</li>
+  <li>Can you sort by Film Name and Film Rank?  (6 points)</li>
+  <li>Can the sorting be done in Ascending and Descending order?  (6 points)</li>
+  <li>Do the results change from a 4+ column grid to a 3 column grid when going from large to medium screens? (2 points) </li>
+  <li>Do the results change from a 3 column grid to a 1 column grid when going from medium to small screens? (2 points) </li>
 </ul>
 
 <p>Gallery View:</p>
 
 <ul>
-  <li>Is the gallery composed of movie posters?  (5 points)</li>
-  <li>Does the list of genres contain all genres?  (5 points)</li>
-  <li>Does clicking on a Genre filter out the movies?  (5 points)</li>
-  <li>Does the genres menu use a responsive grid as described in the requirements? (5 points)</li>
-  <li>Do the movie posters have a responsive grid as described in the requirements? (5 points)</li>
+  <li>Is the gallery composed of movie posters?  (6 points)</li>
+  <li>Does the list of genres contain all genres?  (6 points)</li>
+  <li>Does clicking on a Genre filter out the movies?  (6 points)</li>
+  <li>Does the genres menu use a responsive grid as described in the requirements? (2 points)</li>
+  <li>Do the movie posters have a responsive grid as described in the requirements? (2 points)</li>
 
   
 </ul>
@@ -141,21 +140,13 @@ src="./photos/skyline.jpg"
 <p>Details View:</p>
 
 <ul> 
-  <li>Does clicking on a movie in List View take you to the Details View?  (5 points)</li>
-  <li>Does clicking on a movie in Gallery View take you to the Details View?  (5 points)</li>
-  <li>Does the Details View contain movie details?  (5 points)</li>
+  <li>Does clicking on a movie in List View take you to the Details View?  (8 points)</li>
+  <li>Does clicking on a movie in Gallery View take you to the Details View?  (8 points)</li>
+  <li>Does the Details View contain movie details?  (4 points)</li>
   <li>Do the PREVIOUS and NEXT buttons work correctly?  (10 points)</li>
-  <li>Does the grid change as described in the requirements from large to small? (5 points) </li>
+  <li>Does the grid change as described in the requirements from large to small? (4 points) </li>
 </ul>
-
-<p>Other:</p>
-
-<ul>
-  <li>Does the implementation use partials and routes?  (10 points)</li>
-  <li>Does the implementation use factories/services?  (5 points)</li>  
-  <li>Design (5 points)</li>
-</ul>
-
+		  
 <div class="section-heading"> Tips </div>
 
 <ol>
