Added others section back

--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -147,6 +147,15 @@ src="./photos/skyline.jpg"
   <li>Does the grid change as described in the requirements from large to small? (4 points) </li>
 </ul>
 		  
+<p>Other:</p>
+ 
+ <ul>
+   <li>Does the implementation use partials and routes?  (5 points)</li>
+   <li>Does the implementation use factories/services?  (5 points)</li>  
+   <li>Design (6 points)</li>
+ </ul>
+ 
+		  
 <div class="section-heading"> Tips </div>
 
 <ol>
