--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -131,8 +131,8 @@ src="./photos/skyline.jpg"
   <li>Is the gallery composed of movie posters?  (6 points)</li>
   <li>Does the list of genres contain all genres?  (6 points)</li>
   <li>Does clicking on a Genre filter out the movies?  (6 points)</li>
-  <li>Does the genres menu use a responsive grid as described in the requirements? (2 points)</li>
-  <li>Do the movie posters have a responsive grid as described in the requirements? (2 points)</li>
+  <li>Does the genres menu use all 12 columns for large screens, and a 3-4 column grid for small screens? (2 points)</li>
+  <li>Do the movie posters have a 5+ column grid in large, 4 column grid in medium, and 2 column grid in small? (2 points)</li>
 
   
 </ul>
@@ -144,7 +144,7 @@ src="./photos/skyline.jpg"
   <li>Does clicking on a movie in Gallery View take you to the Details View?  (8 points)</li>
   <li>Does the Details View contain movie details?  (4 points)</li>
   <li>Do the PREVIOUS and NEXT buttons work correctly?  (10 points)</li>
-  <li>Does the grid change as described in the requirements from large to small? (4 points) </li>
+  <li>Does the page have  one column for the image and one for the details on large displays and a stack the image and details for small displays? (4 points) </li>
 </ul>
 		  
 <p>Other:</p>
