Updated with YouTube link

--- a/labs/MP-2/index.html
+++ b/labs/MP-2/index.html
@@ -45,7 +45,7 @@
 
 <p>To get started, follow the setup instructions in the README of <a href="https://github.com/uiuc-web-programming/mp3_starter">this repository</a></p>
 
-<p>Here is a video demo for a <a href="https://dddg.slack.com/files/krishna/F61CC4NDS/mp2.mov">sample application</a></p>
+<p>Here is a video demo for a <a href="https://www.youtube.com/watch?v=irFyoXeOFnU&feature=youtu.be">sample application</a></p>
 
 <div class="section-heading"> AngularJS Front-End Design </div>
 <p>Goal: Create a single-page responsive app that lets users interact with the data from the <a href="http://www.imdb.com/chart/top">IMDB top 250 movies</a>. We’ve already crawled the data and formatted it as JSON: <code>public/data/imdb250.json</code>. We also downloaded the corresponding poster images for each movie: <code>public/data/images</code>. The images are named using the <code>imdbID</code> for each movies.</p>
