--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -16,7 +16,7 @@
         <div class="small-12 columns">
           <div class="nav">
             <a href="">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-            <a href="../labs">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
+            <a href="../../labs">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="https://uiuc-web-programming.github.io/su17/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
           <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Artof</a></div>
@@ -36,15 +36,13 @@
 
     	<p><span class="section-heading">Due Date - <em>July 26th</em>, 2017, 11.59PM CST</span></p>
 
-<p><span style="color: red"> Attention: </span> Please watch <a href="https://github.com/uiuc-web-programming/su17">this repository</a>, <a href="https://github.com/uiuc-web-programming/mp4_client_starter">this repository</a> and <a href="https://github.com/uiuc-web-programming/mp4_server_starter">this repository</a> on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.</p>
+<p><span style="color: red"> Attention: </span> Please watch <a href="https://github.com/uiuc-web-programming/su17">this repository</a> and <a href="https://github.com/uiuc-web-programming/mp4_client_starter">this repository</a> on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.</p>
 
 <p><strong>A demo of a sample app can be seen in <a href="https://www.youtube.com/watch?v=3MoYSJj5M3g">this video</a>.</strong></p>
 
 <p><span class="section-heading">Overview</span></p>
 
 <p>In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. This MP is split up in to two parts. Both the parts can be developed independently. When you are developing your front-end, you can test it using our reference API implementation at <a href="http://www.uiucwp.com:4000/api">http://www.uiucwp.com:4000/api</a>.</p>
-
-<p><span class="section-heading">Part A: Consuming a RESTful API using AngularJS</span></p>
 
 <p><strong>The Basic Goal</strong> : Create a single-page AngularJS task management app that uses our API.</p>
 
