--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -42,7 +42,7 @@
 
 <p><span class="section-heading">Overview</span></p>
 
-<p>In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. This MP is split up in to two parts. Both the parts can be developed independently. When you are developing your front-end, you can test it using our reference API implementation at <a href="http://www.uiucwp.com:4000/api">http://www.uiucwp.com:4000/api</a>.</p>
+<p>In this MP, you will create a REST API (using Node, Express and Mongo) and create a front-end (using Angular) that consumes the API. When you are developing your front-end, you can test it using our reference API implementation at <a href="http://www.uiucwp.com:4000/api">http://www.uiucwp.com:4000/api</a>.</p>
 
 <p><strong>The Basic Goal</strong> : Create a single-page AngularJS task management app that uses our API.</p>
 
