--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -15,7 +15,7 @@
       <div class="row course_header">
         <div class="small-12 columns">
           <div class="nav">
-            <a href="">PIAZZA</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://piazza.com/illinois/summer2017/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
             <a href="../../labs">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="https://uiuc-web-programming.github.io/su17/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
