--- a/labs/MP-3/index.html
+++ b/labs/MP-3/index.html
@@ -316,7 +316,12 @@ http://www.uiucwp.com:4000/api/users?sort={"name": 1}&amp;skip=60&amp;limit=20
 </ul>
 
 <div class="section-heading"> Submission Details </div>
-<p> TBD </p> 
+<ol>
+	  <li> Add uiuc-web-programming as a collaborator on the private Github repo that you created. Keep the repo private.</li>
+	  <li> Submit your code for building using <a href="http://uiucwp.com/#/submit">this</a> system </li>
+	<li> In 2-5 mins, the build system will send you an email with a link to your website. Check the link to make sure everything looks good. If not, correct the mistakes, push changes to Github, and then submit again to have another version built. </li>
+<li> Fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLScxeKwbEdlwGpesFLKWi6AV9qTcx6WTs2EgdLrPToUgW1CkoQ/viewform">this </a> form. </li>
+<ol> 
 
 
 
