Fixed css loading

--- a/labs/MP-4/index.html
+++ b/labs/MP-4/index.html
@@ -9,7 +9,7 @@
     	<script src="../public/foundation.min.js"></script>
 
         <title>MP 4: Creating a RESTful API</title>
-        <link rel="stylesheet" href="../css/main.css" >
+        <link rel="stylesheet" href="../../css/app.css" >
     </head>
     <body>
       <div class="row course_header">
