--- a/labs/MP-4/index.html
+++ b/labs/MP-4/index.html
@@ -42,9 +42,7 @@
 
 <p><span class="section-heading">Overview</span></p>
 
-<p>In this part of MP4, you will create a REST API (using Node, Express and Mongo). When you are developing the API you can test it using <a href="https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en">Postman</a>.</p>
-
-<p><span class="section-heading">Part B: Creating a RESTful API</span></p>
+<p>In this MP, you will create a REST API (using Node, Express and Mongo). When you are developing the API you can test it using <a href="https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm?hl=en">Postman</a>.</p>
 
 <p>Goal: Implement an API with the following end-points (they would be preceded by something like <code>http://localhost:4000/api/</code>). Your implementation should use Node, Express and Mongoose.</p>
 
